managedclusters/lab/lab-qdfwb/nodejs-hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-web-app-deployment
  namespace: node-web-project
spec:
  selector:
    matchLabels:
      app: node-web-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-web-app
        version: 1.1.9
    spec:
      containers:
      - name: node-web-app
        image: vikaspogu/node-ci-test:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
