managedclusters/lab/lab-qdfwb/nodejs-hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-web-app-service
  namespace: node-web-project
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: node-web-app
